# widgets

./: Cargo.toml  README.md  flake.nix
src/: hyprland_workspaces.rs  lib.rs  main.rs
src/battery_display/: mod.rs
src/clock/: mod.rs
src/hyprland/: mod.rs  subscription.rs  ui.rs
